Refactoring model, ver 2